routes/employees/route-tls.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: employees-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`employees.airlines.traefik.EXTERNAL_IP.sslip.io`)
      services:
        - name: employees-app
          port: 3000
  tls:
    certResolver: traefik-airlines
